app/docs/reference/3.1/Metadata/GraphQl/Operation/page.mdx
---
type: Class
---

# [ApiPlatform\Metadata\GraphQl\Operation](/docs/v3.1/reference/Metadata/GraphQl/Operation)



```php
class ApiPlatform\Metadata\GraphQl\Operation extends `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
{
    public __construct(null|string $resolver, null|array $args, null|array<int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`> $links, null|string $shortName, null|string $class, null|bool $paginationEnabled, null|string $paginationType, null|int $paginationItemsPerPage, null|int $paginationMaximumItemsPerPage, null|bool $paginationPartial, null|bool $paginationClientEnabled, null|bool $paginationClientItemsPerPage, null|bool $paginationClientPartial, null|bool $paginationFetchJoinCollection, null|bool $paginationUseOutputWalkers, null|array $order, null|string $description, null|array $normalizationContext, null|array $denormalizationContext, null|bool $collectDenormalizationErrors, null|string $security, null|string $securityMessage, null|string $securityPostDenormalize, null|string $securityPostDenormalizeMessage, null|string $securityPostValidation, null|string $securityPostValidationMessage, null|string $deprecationReason, null|array $filters, null|array $validationContext, array|string|false $input, array|string|false $output, string|array|bool $mercure, string|bool $messenger, null|bool $elasticsearch, null|int $urlGenerationStrategy, null|bool $read, null|bool $deserialize, null|bool $validate, null|bool $write, null|bool $serialize, null|bool $fetchPartial, null|bool $forceEager, null|int $priority, null|string $name, string|callable $provider, string|callable $processor, null|`<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>` $stateOptions, array $extraProperties)
    public getResolver(): string
    public withResolver(null|string $resolver): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
    public getArgs(): array
    public withArgs(null|array $args): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
    public getLinks(): array&lt;int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`&gt;
    public withLinks(array<int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`> $links): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
    public withOperation($operation)
    public getShortName(): string
    public withShortName(null|string $shortName): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getClass(): string
    public withClass(null|string $class): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationEnabled(): bool
    public withPaginationEnabled(null|bool $paginationEnabled): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationType(): string
    public withPaginationType(null|string $paginationType): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationItemsPerPage(): int
    public withPaginationItemsPerPage(null|int $paginationItemsPerPage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationMaximumItemsPerPage(): int
    public withPaginationMaximumItemsPerPage(null|int $paginationMaximumItemsPerPage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationPartial(): bool
    public withPaginationPartial(null|bool $paginationPartial): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationClientEnabled(): bool
    public withPaginationClientEnabled(null|bool $paginationClientEnabled): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationClientItemsPerPage(): bool
    public withPaginationClientItemsPerPage(null|bool $paginationClientItemsPerPage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationClientPartial(): bool
    public withPaginationClientPartial(null|bool $paginationClientPartial): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationFetchJoinCollection(): bool
    public withPaginationFetchJoinCollection(null|bool $paginationFetchJoinCollection): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPaginationUseOutputWalkers(): bool
    public withPaginationUseOutputWalkers(null|bool $paginationUseOutputWalkers): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getOrder(): array
    public withOrder(array $order): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getDescription(): string
    public withDescription(null|string $description): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getNormalizationContext(): array
    public withNormalizationContext(array $normalizationContext): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getDenormalizationContext(): array
    public withDenormalizationContext(array $denormalizationContext): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getCollectDenormalizationErrors(): bool
    public withCollectDenormalizationErrors(null|bool $collectDenormalizationErrors): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurity(): string
    public withSecurity(null|string $security): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurityMessage(): string
    public withSecurityMessage(null|string $securityMessage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurityPostDenormalize(): string
    public withSecurityPostDenormalize(null|string $securityPostDenormalize): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurityPostDenormalizeMessage(): string
    public withSecurityPostDenormalizeMessage(null|string $securityPostDenormalizeMessage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurityPostValidation(): string
    public withSecurityPostValidation(null|string $securityPostValidation): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getSecurityPostValidationMessage(): string
    public withSecurityPostValidationMessage(null|string $securityPostValidationMessage): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getDeprecationReason(): string
    public withDeprecationReason(null|string $deprecationReason): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getFilters(): array
    public withFilters(array $filters): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getValidationContext(): array
    public withValidationContext(array $validationContext): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getInput()
    public withInput($input): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getOutput()
    public withOutput($output): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getMercure()
    public withMercure($mercure): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getMessenger()
    public withMessenger($messenger): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getElasticsearch(): bool
    public withElasticsearch(null|bool $elasticsearch): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getUrlGenerationStrategy(): int
    public withUrlGenerationStrategy(null|int $urlGenerationStrategy): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public canRead(): bool
    public withRead(bool $read): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public canDeserialize(): bool
    public withDeserialize(bool $deserialize): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public canValidate(): bool
    public withValidate(bool $validate): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public canWrite(): bool
    public withWrite(bool $write): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public canSerialize(): bool
    public withSerialize(bool $serialize): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getFetchPartial(): bool
    public withFetchPartial(null|bool $fetchPartial): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getForceEager(): bool
    public withForceEager(null|bool $forceEager): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getPriority(): int
    public withPriority(int $priority): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getName(): string
    public withName(string $name): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getProcessor(): callable|string
    public withProcessor(null|callable|string $processor): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getProvider(): callable|string
    public withProvider(null|callable|string $provider): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getExtraProperties(): array
    public withExtraProperties(array $extraProperties): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public getStateOptions(): `<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>`
    public withStateOptions(null|`<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>` $stateOptions): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    public withResource(`<a href="/docs/v3.1/reference/Metadata/ApiResource">ApiPlatform\Metadata\ApiResource</a>` $resource): `<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
    protected copyFrom(`<a href="/docs/v3.1/reference/Metadata/ApiResource">ApiPlatform\Metadata\ApiResource</a>`|`<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>` $resource): `<a href="/docs/v3.1/reference/Metadata/ApiResource">ApiPlatform\Metadata\ApiResource</a>`|`<a href="/docs/v3.1/reference/Metadata/Operation">ApiPlatform\Metadata\Operation</a>`
}
```
## Properties
### resolver

```php
string $resolver
```



### args

```php
array $args
```



### links

```php
array $links
```



### shortName

```php
string $shortName
```



### class

```php
string $class
```



### paginationEnabled

```php
bool $paginationEnabled
```

The `paginationEnabled` option enables (or disables) the pagination for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationEnabled: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationEnabled: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->

<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationEnabled=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### paginationType

```php
string $paginationType
```

The `paginationType` option defines the type of pagination (`page` or `cursor`) to use for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationType: 'page')]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationType: page
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->

<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationType="page" />
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### paginationItemsPerPage

```php
int $paginationItemsPerPage
```

The `paginationItemsPerPage` option defines the number of items per page for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationItemsPerPage: 30)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationItemsPerPage: 30
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationItemsPerPage=30 />
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### paginationMaximumItemsPerPage

```php
int $paginationMaximumItemsPerPage
```

The `paginationMaximumItemsPerPage` option defines the maximum number of items per page for the current resource.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationMaximumItemsPerPage: 50)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationMaximumItemsPerPage: 50
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationMaximumItemsPerPage=50 />
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### paginationPartial

```php
bool $paginationPartial
```

The `paginationPartial` option enables (or disables) the partial pagination for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationPartial: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationPartial: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationPartial=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### paginationClientEnabled

```php
bool $paginationClientEnabled
```

The `paginationClientEnabled` option allows (or disallows) the client to enable (or disable) the pagination for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationClientEnabled: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationClientEnabled: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationClientEnabled=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

The pagination can now be enabled (or disabled) by adding a query parameter named `pagination`:
- `GET /books?pagination=false`: disabled
- `GET /books?pagination=true`: enabled


### paginationClientItemsPerPage

```php
bool $paginationClientItemsPerPage
```

The `paginationClientItemsPerPage` option allows (or disallows) the client to set the number of items per page for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationClientItemsPerPage: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationClientItemsPerPage: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationClientItemsPerPage=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

The number of items can now be set by adding a query parameter named `itemsPerPage`:
- `GET /books?itemsPerPage=50`


### paginationClientPartial

```php
bool $paginationClientPartial
```

The `paginationClientPartial` option allows (or disallows) the client to enable (or disable) the partial pagination for the current collection operation.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationClientPartial: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationClientPartial: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationClientPartial=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

The partial pagination can now be enabled (or disabled) by adding a query parameter named `partial`:
- `GET /books?partial=false`: disabled
- `GET /books?partial=true`: enabled


### paginationFetchJoinCollection

```php
bool $paginationFetchJoinCollection
```

The PaginationExtension of API Platform performs some checks on the `QueryBuilder` to guess, in most common
cases, the correct values to use when configuring the Doctrine ORM Paginator: `$fetchJoinCollection`
argument, whether there is a join to a collection-valued association.

When set to `true`, the Doctrine ORM Paginator will perform an additional query, in order to get the
correct number of results. You can configure this using the `paginationFetchJoinCollection` option:

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationFetchJoinCollection: false)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationFetchJoinCollection: false
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationFetchJoinCollection=false />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

For more information, please see the [Pagination](https://www.doctrine-project.org/projects/doctrine-orm/en/current/tutorials/pagination.html) entry in the Doctrine ORM documentation.


### paginationUseOutputWalkers

```php
bool $paginationUseOutputWalkers
```

The PaginationExtension of API Platform performs some checks on the `QueryBuilder` to guess, in most common
cases, the correct values to use when configuring the Doctrine ORM Paginator: `$setUseOutputWalkers` setter,
whether to use output walkers.

When set to `true`, the Doctrine ORM Paginator will use output walkers, which are compulsory for some types
of queries. You can configure this using the `paginationUseOutputWalkers` option:

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(paginationUseOutputWalkers: false)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationUseOutputWalkers: false
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationUseOutputWalkers=false />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

For more information, please see the [Pagination](https://www.doctrine-project.org/projects/doctrine-orm/en/current/tutorials/pagination.html) entry in the Doctrine ORM documentation.


### paginationViaCursor

```php
array $paginationViaCursor
```

The `paginationViaCursor` option configures the cursor-based pagination for the current resource.
Select your unique sorted field as well as the direction you'll like the pagination to go via filters.
Note that for now you have to declare a `RangeFilter` and an `OrderFilter` on the property used for the cursor-based pagination:.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\ApiFilter;
use ApiPlatform\Metadata\GetCollection;
use ApiPlatform\Doctrine\Odm\Filter\OrderFilter;
use ApiPlatform\Doctrine\Odm\Filter\RangeFilter;

#[GetCollection(paginationPartial: true, paginationViaCursor: [['field' => 'id', 'direction' => 'DESC']])]
#[ApiFilter(RangeFilter::class, properties: ["id"])]
#[ApiFilter(OrderFilter::class, properties: ["id" => "DESC"])]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  paginationPartial: true
                  paginationViaCursor:
                      - { field: 'id', direction: 'DESC' }
                  filters: [ 'app.filters.book.range', 'app.filters.book.order' ]
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->

<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection" paginationPartial=true>
                <filters>
                    <filter>app.filters.book.range</filter>
                    <filter>app.filters.book.order</filter>
                </filters>
                <paginationViaCursor>
                    <paginationField field="id" direction="DESC" />
                </paginationViaCursor>
            </operation>
        </operations>
    </resource>
</resources>
```
</CodeSelector>

To know more about cursor-based pagination take a look at [this blog post on medium (draft)](https://medium.com/@sroze/74fd1d324723).


### order

```php
array $order
```



### description

```php
string $description
```



### normalizationContext

```php
array $normalizationContext
```



### denormalizationContext

```php
array $denormalizationContext
```



### collectDenormalizationErrors

```php
bool $collectDenormalizationErrors
```



### security

```php
string $security
```



### securityMessage

```php
string $securityMessage
```



### securityPostDenormalize

```php
string $securityPostDenormalize
```



### securityPostDenormalizeMessage

```php
string $securityPostDenormalizeMessage
```



### securityPostValidation

```php
string $securityPostValidation
```



### securityPostValidationMessage

```php
string $securityPostValidationMessage
```



### deprecationReason

```php
string $deprecationReason
```

The `deprecationReason` option deprecates the current operation with a deprecation message.

<CodeSelector>
```php
<?php
// api/src/Entity/Parchment.php
use ApiPlatform\Metadata\Get;

#[Get(deprecationReason: 'Create a Book instead')]
class Parchment
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Parchment:
        - operations:
              ApiPlatform\Metadata\Get:
                  deprecationReason: 'Create a Book instead'
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->

<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Parchment">
        <operations>
            <operation class="ApiPlatform\Metadata\Get" deprecationReason="Create a Book instead" />
        <operations>
    </resource>
</resources>
```
</CodeSelector>

- With JSON-lD / Hydra, [an `owl:deprecated` annotation property](https://www.w3.org/TR/owl2-syntax/#Annotation_Properties) will be added to the appropriate data structure
- With Swagger / OpenAPI, [a `deprecated` property](https://swagger.io/docs/specification/2-0/paths-and-operations/) will be added
- With GraphQL, the [`isDeprecated` and `deprecationReason` properties](https://facebook.github.io/graphql/June2018/#sec-Deprecation) will be added to the schema


### filters

```php
array $filters
```

The `filters` option configures the filters (declared as services) available on the collection routes for the current resource.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\GetCollection;

#[GetCollection(filters: ['app.filters.book.search'])]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\GetCollection:
                  filters: ['app.filters.book.search']
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->
<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\GetCollection">
                <filters>
                    <filter>app.filters.book.search</filter>
                </filters>
            </operation>
        </operations>
    </resource>
</resources>
```
</CodeSelector>


### validationContext

```php
array $validationContext
```

The `validationContext` option configure the context of validation for the current Operation.
You can, for instance, describe the validation groups that will be used :.

```php
  #[Put(validationContext: ['groups' => ['Default', 'putValidation']])]
  #[Post(validationContext: ['groups' => ['Default', 'postValidation']])]
```

For more examples, read our guide on [validation](/guides/validation).


### input

```php
$input
```



### output

```php
$output
```



### mercure

```php
$mercure
```



### messenger

```php
string|bool $messenger
```

The `messenger` option dispatches the current resource through the Message Bus.

<CodeSelector>
```php
<?php
// api/src/Entity/Book.php
use ApiPlatform\Metadata\Post;

#[Post(messenger: true)]
class Book
{
    // ...
}
```

```yaml
# api/config/api_platform/resources.yaml
resources:
    App\Entity\Book:
        - operations:
              ApiPlatform\Metadata\Post:
                  messenger: true
```

```xml
<?xml version="1.0" encoding="UTF-8" ?>
<!-- api/config/api_platform/resources.xml -->

<resources
        xmlns="https://api-platform.com/schema/metadata/resources-3.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="https://api-platform.com/schema/metadata/resources-3.0
        https://api-platform.com/schema/metadata/resources-3.0.xsd">
    <resource class="App\Entity\Book">
        <operations>
            <operation class="ApiPlatform\Metadata\Post" messenger=true />
        </operations>
    </resource>
</resources>
```
</CodeSelector>

Note: when using `messenger=true` on a Doctrine entity, the Doctrine Processor is not called. If you want it
to be called, you should [decorate a built-in state processor](/docs/guide/hook-a-persistence-layer-with-a-processor)
and implement your own logic.

Read [how to use Messenger with an Input object](/docs/guide/using-messenger-with-an-input-object).



### elasticsearch

```php
bool $elasticsearch
```



### urlGenerationStrategy

```php
int $urlGenerationStrategy
```



### read

```php
bool $read
```



### deserialize

```php
bool $deserialize
```



### validate

```php
bool $validate
```



### write

```php
bool $write
```



### serialize

```php
bool $serialize
```



### fetchPartial

```php
bool $fetchPartial
```



### forceEager

```php
bool $forceEager
```



### priority

```php
int $priority
```



### name

```php
string $name
```



### provider

```php
$provider
```



### processor

```php
$processor
```



### stateOptions

```php
`<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>` $stateOptions
```



### extraProperties

```php
array $extraProperties
```



## Methods

### __construct



```php
public __construct(null|string $resolver, null|array $args, null|array<int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`> $links, null|string $shortName, null|string $class, null|bool $paginationEnabled, null|string $paginationType, null|int $paginationItemsPerPage, null|int $paginationMaximumItemsPerPage, null|bool $paginationPartial, null|bool $paginationClientEnabled, null|bool $paginationClientItemsPerPage, null|bool $paginationClientPartial, null|bool $paginationFetchJoinCollection, null|bool $paginationUseOutputWalkers, null|array $order, null|string $description, null|array $normalizationContext, null|array $denormalizationContext, null|bool $collectDenormalizationErrors, null|string $security, null|string $securityMessage, null|string $securityPostDenormalize, null|string $securityPostDenormalizeMessage, null|string $securityPostValidation, null|string $securityPostValidationMessage, null|string $deprecationReason, null|array $filters, null|array $validationContext, array|string|false $input, array|string|false $output, string|array|bool $mercure, string|bool $messenger, null|bool $elasticsearch, null|int $urlGenerationStrategy, null|bool $read, null|bool $deserialize, null|bool $validate, null|bool $write, null|bool $serialize, null|bool $fetchPartial, null|bool $forceEager, null|int $priority, null|string $name, string|callable $provider, string|callable $processor, null|`<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>` $stateOptions, array $extraProperties)
```

#### Parameters

<table><tbody>
<tr><td>resolver</td><td>string</td><td></td></tr><tr><td>args</td><td>array</td><td></td></tr><tr><td>links</td><td>array&lt;int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`&gt;</td><td></td></tr><tr><td>shortName</td><td>string</td><td></td></tr><tr><td>class</td><td>string</td><td></td></tr><tr><td>paginationEnabled</td><td>bool</td><td></td></tr><tr><td>paginationType</td><td>string</td><td></td></tr><tr><td>paginationItemsPerPage</td><td>int</td><td></td></tr><tr><td>paginationMaximumItemsPerPage</td><td>int</td><td></td></tr><tr><td>paginationPartial</td><td>bool</td><td></td></tr><tr><td>paginationClientEnabled</td><td>bool</td><td></td></tr><tr><td>paginationClientItemsPerPage</td><td>bool</td><td></td></tr><tr><td>paginationClientPartial</td><td>bool</td><td></td></tr><tr><td>paginationFetchJoinCollection</td><td>bool</td><td></td></tr><tr><td>paginationUseOutputWalkers</td><td>bool</td><td></td></tr><tr><td>order</td><td>array</td><td></td></tr><tr><td>description</td><td>string</td><td></td></tr><tr><td>normalizationContext</td><td>array</td><td></td></tr><tr><td>denormalizationContext</td><td>array</td><td></td></tr><tr><td>collectDenormalizationErrors</td><td>bool</td><td></td></tr><tr><td>security</td><td>string</td><td></td></tr><tr><td>securityMessage</td><td>string</td><td></td></tr><tr><td>securityPostDenormalize</td><td>string</td><td></td></tr><tr><td>securityPostDenormalizeMessage</td><td>string</td><td></td></tr><tr><td>securityPostValidation</td><td>string</td><td></td></tr><tr><td>securityPostValidationMessage</td><td>string</td><td></td></tr><tr><td>deprecationReason</td><td>string</td><td></td></tr><tr><td>filters</td><td>array</td><td></td></tr><tr><td>validationContext</td><td>array</td><td></td></tr><tr><td>input</td><td>array<br />string<br />false</td><td>https://api-platform.com/docs/core/dto/#specifying-an-input-or-an-output-data-representation</td></tr><tr><td>output</td><td>array<br />string<br />false</td><td>https://api-platform.com/docs/core/dto/#specifying-an-input-or-an-output-data-representation</td></tr><tr><td>mercure</td><td>string<br />array<br />bool</td><td>https://api-platform.com/docs/core/mercure</td></tr><tr><td>messenger</td><td>string<br />bool</td><td>https://api-platform.com/docs/core/messenger/#dispatching-a-resource-through-the-message-bus</td></tr><tr><td>elasticsearch</td><td>bool</td><td></td></tr><tr><td>urlGenerationStrategy</td><td>int</td><td></td></tr><tr><td>read</td><td>bool</td><td></td></tr><tr><td>deserialize</td><td>bool</td><td></td></tr><tr><td>validate</td><td>bool</td><td></td></tr><tr><td>write</td><td>bool</td><td></td></tr><tr><td>serialize</td><td>bool</td><td></td></tr><tr><td>fetchPartial</td><td>bool</td><td></td></tr><tr><td>forceEager</td><td>bool</td><td></td></tr><tr><td>priority</td><td>int</td><td></td></tr><tr><td>name</td><td>string</td><td></td></tr><tr><td>provider</td><td>string<br />callable</td><td>https://api-platform.com/docs/core/state-providers/#state-providers</td></tr><tr><td>processor</td><td>string<br />callable</td><td>https://api-platform.com/docs/core/state-processors/#state-processors</td></tr><tr><td>stateOptions</td><td>`<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>`</td><td></td></tr><tr><td>extraProperties</td><td>array</td><td></td></tr>
</tbody>
</table>

### getResolver



```php
public getResolver(): string
```

#### Returns

string

### withResolver



```php
public withResolver(null|string $resolver): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
```

#### Parameters

<table><tbody>
<tr><td>resolver</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`

### getArgs



```php
public getArgs(): array
```

#### Returns

array

### withArgs



```php
public withArgs(null|array $args): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
```

#### Parameters

<table><tbody>
<tr><td>args</td><td>array</td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`

### getLinks



```php
public getLinks(): array&lt;int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`&gt;
```

#### Returns

array&lt;int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`&gt;

### withLinks



```php
public withLinks(array<int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`> $links): `<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
```

#### Parameters

<table><tbody>
<tr><td>links</td><td>array&lt;int, `<a href="/docs/v3.1/reference/Metadata/Link">ApiPlatform\Metadata\Link</a>`&gt;</td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.1/reference/Metadata/GraphQl/Operation">ApiPlatform\Metadata\GraphQl\Operation</a>`
